# gta-remix-compat

./: CMakeLists.txt  CMakePresets.json  README.md  response-file.txt  response_file.txt
.github/workflows/: cmake.yml
remix_compat/: CMakeLists.txt  executable_injection.ixx  gta_remix_fixes.ixx  gta_sa_fixes.cpp  main.cpp
